# scrcpyx

scrcpyx-app/: .gitignore  .npmrc  App.tsx  README.md  app-config.plugin.js  app.json  b.sh  buf.gen.yaml  init-starter-reverse.js  init-starter.js  log.sh  metro.config.js  package.json  tsconfig.json
scrcpyx-app/dm/rn-starter-app/: package.json
scrcpyx-app/dm/rn-starter-expo/: package.json
scrcpyx-app/dm/rn-starter-expo-navigation/: package.json
scrcpyx-app/dm/rn-starter-expo-web/: package.json
scrcpyx-app/dm/rn-starter-grpc/: package.json
scrcpyx-app/dm/rn-starter-ui-tamagui/: package.json
scrcpyx-app/src/: AppCtx.tsx  AppCtxDom.tsx  AppCtxNavigation.native.tsx  AppCtxNavigation.tsx  tamagui.config.ts  themes.ts
scrcpyx-app/src/api/: scrcpyx_mgr.ts
scrcpyx-app/src/components/ListView/: ListVIewFlashList.tsx  ListViewBasic.tsx  ListViewTamaXStack.tsx  index.tsx
scrcpyx-app/src/components/LoadingView/: index.tsx
scrcpyx-app/src/config/: constatns.ts
scrcpyx-app/src/hook/: immersiveMode.ts
scrcpyx-app/src/pages/scrcpyx/: AddAppModal.tsx  App.tsx  AppDock.tsx  AppGrid.tsx  AppIcon.tsx  AppStore.ts  (+11 more)
scrcpyx-app/src/store/: MediaLibraryStore.tsx
scrcpyx-app/src/utils/: grpc.ts
scrcpyx-mgr/: .gitignore  Dockerfile  README.md  buf.gen.yaml  proto.sh  pyproject.toml
scrcpyx-mgr/proto/scrcpyx/mgr/v1/: mgr.proto
scrcpyx-mgr/src/scrcpyx/mgr/v1/server/: adb_client.py  grpc_client.py  grpc_server.py  main.py  proxy_client.py  proxy_server.py
scrcpyx-mgr/src/scrcpyx/mgr/v1/server/service/impl/: scrcpyx_mgr_route_service.py  scrcpyx_mgr_service.py
(+4 files in other folders)
