[project]
name = "scrcpyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiocache>=0.12.3",
    "grpcio>=1.76.0",
]

[dependency-groups]
dev = [
    "pyinstaller",
    "grpcio-tools>=1.76.0",
]

[build-system]
requires = ["uv_build>=0.9.17"]
build-backend = "uv_build"